# ShenanigansWithBitmaps

./: .gitignore  CMakeLists.txt  Makefile
ShenanigansWithBitmaps/: Prompts.aps  Prompts.rc  ShenanigansWithBitmaps.vcxproj  ShenanigansWithBitmaps.vcxproj.filters  resource2.h
ShenanigansWithBitmaps/Source/: Pch.h
ShenanigansWithBitmaps/Source/Core/: Application.cpp  Application.hpp  Bitmap.cpp  Bitmap.hpp  BytesManipulation.cpp  BytesManipulation.hpp  HexEditor.cpp  HexEditor.hpp
ShenanigansWithBitmaps/Source/EntryPoint/Win32/: Entry.h
ShenanigansWithBitmaps/Source/UserInputOutput/: Input.cpp  Input.hpp  Output.cpp  Output.hpp
Source/Core/: Application.cpp  Application.hpp
Source/EntryPoint/: Entry.cpp
